# WeatherApp

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  city.cpp  city.h  interface.cpp  interface.h  weather.cpp  weather.h
